[gd_scene load_steps=28 format=3 uid="uid://cpybmtq4kyrg3"]

[ext_resource type="Script" uid="uid://ka7mtavqyf6c" path="res://Characters/Enemies/Bosses/StageMaster/StageMaster.gd" id="1_ct82f"]
[ext_resource type="Texture2D" uid="uid://ccrcki2ypp1fp" path="res://Resources/enemies/hand-puppet.png" id="2_oybe1"]
[ext_resource type="Script" uid="uid://drf17f1mu335f" path="res://StateMachine/StateMachine.gd" id="3_onls2"]
[ext_resource type="Script" uid="uid://drxfmh7fsikhl" path="res://Characters/Enemies/Bosses/StageMaster/StageMasterStates/StageMasterSelectionState.gd" id="4_shk4a"]
[ext_resource type="Script" uid="uid://whyb3k2a5mij" path="res://Characters/Enemies/Bosses/StageMaster/StageMasterStates/StageMasterIdleState.gd" id="5_vgddr"]
[ext_resource type="Script" uid="uid://degr43kdrol8j" path="res://Characters/Enemies/Bosses/StageMaster/StageMasterStates/StageMasterScissorsState.gd" id="6_vgddr"]
[ext_resource type="Script" uid="uid://ykeb68jfxxio" path="res://Characters/Enemies/Bosses/StageMaster/StageMasterStates/StageMasterRockState.gd" id="7_dip4b"]
[ext_resource type="Script" uid="uid://b0s5g2qndd7bn" path="res://Characters/Enemies/Bosses/StageMaster/StageMasterStates/StageMasterPaperState.gd" id="8_jeotl"]

[sub_resource type="Gradient" id="Gradient_oybe1"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_onls2"]
gradient = SubResource("Gradient_oybe1")

[sub_resource type="SphereMesh" id="SphereMesh_shk4a"]
radius = 25.0
height = 4.0

[sub_resource type="MeshTexture" id="MeshTexture_iionx"]
mesh = SubResource("SphereMesh_shk4a")
base_texture = SubResource("GradientTexture1D_onls2")
image_size = Vector2(5, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_dip4b"]
radius = 28.0

[sub_resource type="Animation" id="Animation_shk4a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 4)]
}

[sub_resource type="Animation" id="Animation_vgddr"]
resource_name = "build_up"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, -10), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.0472, -1.5708, -1.0472, -1.5708, -1.0472, -1.5708, -1.0472, -1.0472, -1.5708]
}

[sub_resource type="Animation" id="Animation_b17kb"]
resource_name = "build_up_right"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, -10), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -2.0944, -1.5708, -2.0944, -1.5708, -2.0944, -1.5708, -2.0944, -2.0944, -1.5708]
}

[sub_resource type="Animation" id="Animation_q7yip"]
resource_name = "gun"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_qyqih"]
resource_name = "gun_fire"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(-1.5708, -0.25, 0, 0.25, 0, -1.48353, -0.25, 0, 0.25, 0, -1.39626, -0.25, 0, 0.25, 0, -1.309, -0.25, 0, 0.25, 0, -1.22173, -0.25, 0, 0.25, 0, -1.5708, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 1)
}

[sub_resource type="Animation" id="Animation_onls2"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.01, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0jdr8"]
resource_name = "lazer"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_jeotl"]
resource_name = "paper"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_dip4b"]
resource_name = "rock"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_q02go"]
resource_name = "scissors"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x5j7s"]
resource_name = "scissors_moving"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 0, 1]
}

[sub_resource type="Animation" id="Animation_3tw3s"]
resource_name = "rock_smash"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5, 3.55, 3.6, 3.65, 3.7, 3.75, 3.8, 3.85, 3.9, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40), Vector2(0, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(0, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.0472, -1.0472, -1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(0.8, 1), Vector2(1.2, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 4), Vector2(3, -34), Vector2(3, -34), Vector2(5, 10)]
}

[sub_resource type="Animation" id="Animation_nvtcv"]
resource_name = "rock_smash_right"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5, 3.55, 3.6, 3.65, 3.7, 3.75, 3.8, 3.85, 3.9, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40), Vector2(0, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(-5, -40), Vector2(5, -40), Vector2(0, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -2.0944, -2.0944, -1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(0.8, 1), Vector2(1.2, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 4), Vector2(3, -34), Vector2(3, -34), Vector2(5, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iionx"]
_data = {
&"RESET": SubResource("Animation_shk4a"),
&"build_up": SubResource("Animation_vgddr"),
&"build_up_right": SubResource("Animation_b17kb"),
&"gun": SubResource("Animation_q7yip"),
&"gun_fire": SubResource("Animation_qyqih"),
&"idle": SubResource("Animation_onls2"),
&"lazer": SubResource("Animation_0jdr8"),
&"paper": SubResource("Animation_jeotl"),
&"rock": SubResource("Animation_dip4b"),
&"rock_smash": SubResource("Animation_3tw3s"),
&"rock_smash_right": SubResource("Animation_nvtcv"),
&"scissors": SubResource("Animation_q02go"),
&"scissors_moving": SubResource("Animation_x5j7s")
}

[node name="StageMaster" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 37
script = ExtResource("1_ct82f")
metadata/_custom_type_script = "uid://criba37b46pq1"

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(2, 35)
texture = SubResource("MeshTexture_iionx")
offset = Vector2(2.5, 2.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("2_oybe1")
hframes = 2
vframes = 3
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 4)
shape = SubResource("CircleShape2D_dip4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iionx")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_onls2")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://drf17f1mu335f"

[node name="Select" type="Node" parent="StateMachine" node_paths=PackedStringArray("STAGE_MASTER")]
script = ExtResource("4_shk4a")
STAGE_MASTER = NodePath("../..")
metadata/_custom_type_script = "uid://d1tq2i2wkva5c"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_vgddr")
metadata/_custom_type_script = "uid://d1tq2i2wkva5c"

[node name="Scissors" type="Node" parent="StateMachine" node_paths=PackedStringArray("STAGE_MASTER")]
script = ExtResource("6_vgddr")
STAGE_MASTER = NodePath("../..")
ATTACK_COOLDOWN = 2.0
metadata/_custom_type_script = "uid://d1tq2i2wkva5c"

[node name="Rock" type="Node" parent="StateMachine" node_paths=PackedStringArray("STAGE_MASTER")]
script = ExtResource("7_dip4b")
STAGE_MASTER = NodePath("../..")
metadata/_custom_type_script = "uid://d1tq2i2wkva5c"

[node name="Paper" type="Node" parent="StateMachine"]
script = ExtResource("8_jeotl")
metadata/_custom_type_script = "uid://d1tq2i2wkva5c"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 50.0
navigation_layers = 2
simplify_path = true

[node name="StatusLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Select" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Rock" method="_on_animation_player_animation_finished"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
